--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "3.3.2"
   }
 }
