--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
-    "react-icons": "^5.2.0"
+    "react-icons": "^5.2.0",
+    "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
