--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/tabs": "^2.0.29",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "react": "^18",
