--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/tabs": "^2.0.29",
+    "aos": "^2.3.4",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "react": "^18",
